# EvoSimC

./: .gitignore  LICENSE  README.md  demo_database.py  proposal.md  pyproject.toml  requirements.txt  run_evolution.py
.github/workflows/: test.yml
config/: config_base.yaml  example_config.yaml
evosim/: entities.py
evosim/core/: __init__.py  controller.py  database.py  programs.py  prompt_sampler.py  prompts.py  sampling.py
evosim/llm/: __init__.py  llm.py
evosim/simc/: __init__.py  simc_runner.py  simc_templates.py
tests/: test_aplprogram.py  test_controller.py  test_database.py  test_entities.py  test_llm.py  test_prompt_sampler.py  test_simc_runner.py
